# learn-bazel

./: .bazelignore  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
project-a/: BUILD.bazel  index.js  package.json
project-b/: BUILD.bazel  index.js  package.json
