workspace(
	name = "bazel-test",
)

# import http_archive rule
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# # fix bazel-lib
# http_archive(
#     name = "aspect_bazel_lib",
#     sha256 = "79381b0975ba7d2d5653239e5bab12cf54d89b10217fe771b8edd95047a2e44b",
#     strip_prefix = "bazel-lib-1.12.1",
#     url = "https://github.com/aspect-build/bazel-lib/archive/refs/tags/v1.12.1.tar.gz",
# )

# # fix some bazel-lib issue
# load("@aspect_bazel_lib//lib:repositories.bzl", "aspect_bazel_lib_dependencies", "register_jq_toolchains")
# aspect_bazel_lib_dependencies(override_local_config_platform = True)

# Set up rules_js
http_archive(
    name = "aspect_rules_js",
    sha256 = "b9fde0f20de6324ad443500ae738bda00facbd73900a12b417ce794856e01407",
    strip_prefix = "rules_js-1.5.0",
    url = "https://github.com/aspect-build/rules_js/archive/refs/tags/v1.5.0.tar.gz",
)

load("@aspect_rules_js//js:dev_repositories.bzl", "rules_js_dev_dependencies")
rules_js_dev_dependencies()

load("@aspect_rules_js//js:repositories.bzl", "rules_js_dependencies")
rules_js_dependencies()

load("@rules_nodejs//nodejs:repositories.bzl", "nodejs_register_toolchains")
nodejs_register_toolchains(
    name = "nodejs",
    node_version = "16.17.0",
)

load("@aspect_rules_js//npm:npm_import.bzl", "npm_translate_lock")
npm_translate_lock(
    name = "npm_deps",
	# bins = {
 #        "typescript": {
 #            "tsc": "./bin/tsc",
 #            "tsserver": "./bin/tsserver",
 #        },
 #    },
    pnpm_lock = "//:pnpm-lock.yaml",
    # verify_node_modules_ignored = "//:.bazelignore",
)

load("@npm_deps//:repositories.bzl", "npm_repositories")
npm_repositories()
