load("@npm_deps//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")

npm_link_all_packages(name = "node_modules")

js_library(
    name = "libb",
    srcs = [
        "index.js",
        "package.json",
    ],
	data = ["//project-b:node_modules"],
    visibility = ["//:__subpackages__"],
)

npm_package(
	name = "project-b",
	srcs = [":libb"],
	visibility = ["//visibility:public"],
)
